feat: creating C series teams folder
