# swagger.json
@@ -583,6 +583,228 @@
           }
         }
       }
+    },
+    "/seriec": {
+      "get": {
+        "summary": "Lista de todos os times",
+        "description": "Rota responsável por listar todos os times",
+        "tags": ["Serie C"],
+        "responses": {
+          "404": {
+            "description": "Not Found"
+          },
+          "200": {
+            "description": "ok",
+            "content": {
+              "appliation/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/teamsbrazilian2022"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/seriec/find/{id}": {
+      "get": {
+        "summary": "Busca um time pelo ID",
+        "description": "Rota responsável por buscar um time pelo ID",
+        "tags": ["Serie C"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id do time para a busca",
+            "required": true
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad Request"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/teamsbrazilian2022"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/seriec/create": {
+      "post": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "summary": "Cadastrar um time",
+        "description": "Rota responsável por cadastrar um time",
+        "tags": ["Serie C"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/teamsbrazilian2022"
+              },
+              "examples": {
+                "Rickandmortys": {
+                  "value": {
+                    "name": "Mirassol Futebol Clube",
+                    "foundation": 1925,
+                    "shield": "https://s.sde.globo.com/media/organizations/2019/01/08/mirassol-futebol-clube.svg",
+                    "mascot": "Leão",
+                    "localization": "Mirassol"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "400": {
+            "description": "Bad Request"
+          },
+          "201": {
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/teamsbrazilian2022"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/seriec/update/{id}": {
+      "put": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "summary": "Editar um time pelo ID",
+        "description": "Rota responsável por editar um time pelo ID",
+        "tags": ["Serie C"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id do time para a busca",
+            "required": true
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/teamsbrazilian2022"
+              },
+              "examples": {
+                "Paletas": {
+                  "value": {
+                    "name": "Mirassol Futebol Clube editado",
+                    "foundation": 1925,
+                    "shield": "https://s.sde.globo.com/media/organizations/2019/01/08/mirassol-futebol-clube.svg",
+                    "mascot": "Leão",
+                    "localization": "Mirassol"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "400": {
+            "description": "Bad Request"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/teamsbrazilian2022"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/seriec/delete/{id}": {
+      "delete": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "summary": "Apagar um time pelo ID",
+        "description": "Rota responsável por apagar um time pelo ID",
+        "tags": ["Serie C"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id do time para deleção",
+            "required": true
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad Request"
+          },
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/seriec/search": {
+      "get": {
+        "summary": "Busca um time pelo nome",
+        "description": "Rota responsável por buscar um time pelo nome",
+        "tags": ["Serie C"],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "name",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/teamsbrazilian2022"
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      }
     }
   },
   "components": {
